crates/editor-codec-macros/tests/compile_fail/grade_on_enum.stderr
error: evolvable/frozen grades are struct-only
 --> tests/compile_fail/grade_on_enum.rs:6:10
  |
6 | pub enum E {
  |          ^
